# Erudio

./: .dockerignore  .env  .env.postgress.template  .eslintignore  .eslintrc.json  .gitignore  .npmrc  CODEOWNERS  Cargo.toml  Config.ron  README_HIDDEN.md  clean.sh  deny.toml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redis.conf  rustfmt.toml  shell.nix  tsconfig.base.json  tsconfig.json  vite.config.base.ts
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: main.yml  test.yml
apps/api/: Cargo.toml  Dockerfile  project.json
apps/api/src/: error_mapping.rs  main.rs  prisma.rs  shutdown_signal.rs
apps/api/src/routes/: mod.rs
apps/api/src/routes/public/: login.rs  mod.rs  register.rs  version.rs
apps/api/src/routes/user/: me.rs  mod.rs
apps/erudio/: .env.postgress.template  .env.template  bindings.ts  docker-compose.ci.yml  docker-compose.yml  fluent-bit.conf  index.html  jest.config.ts  nginx.conf  package.json  project.json  redis.conf  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1668549861333.mjs
apps/erudio-e2e/: project.json
apps/erudio-e2e/src/e2e/: app.cy.ts
apps/erudio-old/: .eslintrc.cjs  package.json  tsconfig.json
apps/erudio/backend-api/: Cargo.toml  Dockerfile  build.rs
apps/erudio/backend-api-e2e/: register-login.hurl
apps/erudio/backend-api/src/: cookies.rs  helpers.rs  main.rs  routes.rs  shutdown_signal.rs  zod_bindings.rs
apps/erudio/backend-api/src/helpers/: argon.rs  config.rs  consts.rs  ctx.rs  mod.rs  pagination.rs  seed.rs
apps/erudio/backend-api/src/routes/: admin.rs  mod.rs  public.rs  super_admin.rs
apps/erudio/backend-api/src/routes/admin/: version.rs
apps/erudio/backend-api/src/routes/file/: mod.rs  upload.rs
apps/erudio/backend-api/src/routes/public/: admin_login.rs  login.rs  mod.rs  register.rs  version.rs
apps/erudio/backend-api/src/routes/super_admin/: add_school.rs  add_user_to_school.rs  get_school.rs  get_user.rs  search_schools.rs  search_users.rs  update_school.rs
apps/erudio/backend-api/src/routes/user/: logout.rs  me.rs  mod.rs
apps/erudio/backend-prisma-cli/: Cargo.toml
apps/erudio/backend-prisma-cli/prisma/: schema.prisma
apps/erudio/backend-prisma-cli/prisma/migrations/20221115185736_initial_migration/: migration.sql
apps/erudio/backend-prisma-cli/prisma/migrations/20221202171146_pii_data_update/: migration.sql
apps/erudio/backend-prisma-cli/prisma/migrations/20230206141801_super_admin/: migration.sql
apps/erudio/backend-prisma-cli/prisma/migrations/20230209152210_init/: migration.sql
apps/erudio/docker/nginx/: nginx.conf
apps/erudio/frontend/: .eslintrc.cjs  .typesafe-i18n.json  capacitor.config.ts  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/erudio/frontend/src/: api-setup.ts  entry-client.tsx  root.tsx  theme.ts
apps/erudio/frontend/src/components/: LoadingPage.tsx  Me.tsx  Nav.tsx  PromptPWA.tsx
apps/erudio/frontend/src/components/contexts/: ClientProvider.spec.tsx  (+5 more)
apps/erudio/frontend/src/i18n/: i18n-types.ts
apps/erudio/frontend/src/lib/: api.ts  env.ts  session.ts  zod.ts
apps/erudio/frontend/src/routes/: (auth).tsx  admin.tsx  adminlogin.tsx  index.tsx
apps/erudio/frontend/src/test/: data.ts  setupTest.ts
apps/erudio/src/: api-client.ts  root.tsx
apps/erudio/src/routes/: index.tsx
apps/erudio/src/routes/[lang]/: [lang].tsx  index.tsx
apps/prisma-cli/: Cargo.toml  project.json
apps/prisma-cli/prisma/: schema.prisma
apps/prisma-cli/prisma/migrations/20221108162209_init_migration/: migration.sql
apps/prisma-cli/prisma/migrations/20221111210418_test/: migration.sql
apps/prisma-cli/prisma/migrations/20221115184459_initial_migration/: migration.sql
apps/prisma-cli/prisma/migrations/20221115185736_initial_migration/: migration.sql
apps/prisma-cli/src/: main.rs
configs/: .gitignore
configs/dev/: .env  Config.ron
configs/local/: .env  Config.ron
envs/dev/: .env  .env.postgress
envs/local/: .env
libs/backend/error-handler/: Cargo.toml  project.json
libs/backend/error-handler/src/: error_mapping.rs  lib.rs
libs/backend/prisma-client/: Cargo.toml  project.json
libs/backend/prisma-client/src/: lib.rs
libs/backend/session-manager/: Cargo.toml  project.json
libs/backend/session-manager/src/: destroy_all_sessions_for_user.rs  destroy_session.rs  init_session.rs  lib.rs  tests.rs
libs/frontend/data-access/api/: .eslintrc.js  README.md  jest.config.ts  package.json  project.json  tsconfig.lib.json  tsconfig.spec.json
libs/frontend/data-access/api/src/: index.ts
libs/frontend/data-access/i18n/: .typesafe-i18n.json  README.md  jest.config.ts  package.json  project.json  tsconfig.json
libs/frontend/data-access/i18n/src/: index.ts
libs/frontend/features/authentication/: .eslintrc.js  jest.config.ts  package.json  project.json  tsconfig.lib.json
libs/frontend/features/authentication/src/: index.ts
libs/frontend/ui/login-page/: .eslintrc.js  jest.config.ts  package.json  project.json  tsconfig.json
libs/frontend/ui/login-page/src/: index.ts
shared-libs/rust/config/: Cargo.toml
shared-libs/rust/config/src/: lib.rs
shared-libs/rust/error-handler/: Cargo.toml
shared-libs/rust/error-handler/src/: error_mapping.rs  lib.rs
shared-libs/rust/prisma-client/: Cargo.toml
shared-libs/rust/prisma-client/src/: lib.rs
shared-libs/rust/services/: Cargo.toml
shared-libs/rust/services/src/: lib.rs
shared-libs/rust/services/src/s3/: mod.rs
shared-libs/rust/services/src/session/: check.rs  destroy.rs  destroy_all_for_user.rs  init.rs  load.rs  mod.rs  recover.rs
shared-libs/rust/services/tests/: integration_test.rs
shared-libs/rust/services/tests/commons/: mod.rs
shared-libs/rust/session-manager/: Cargo.toml
shared-libs/rust/session-manager/src/: destroy_all_sessions_for_user.rs  destroy_session.rs  init_session.rs  lib.rs  load_session.rs  tests.rs
shared-libs/rust/session-manager/src/tests/: init.rs  mod.rs
shared-libs/rust/session-manager/tests/: integration_test.rs
shared-libs/rust/session-manager/tests/commons/: mod.rs
(+33 files in other folders)
