[workspace]
resolver = "2"
members = [
    "shared-libs/rust/error-handler",
    "shared-libs/rust/prisma-client",
    "shared-libs/rust/session-manager",
    "apps/erudio/backend-api",
    "apps/erudio/backend-prisma-cli"
]

[workspace.dependencies]
backend_prisma_client = { path = "shared-libs/rust/prisma-client" }
backend_session_manager = { path = "shared-libs/rust/session-manager" }
backend_error_handler = { path = "shared-libs/rust/error-handler" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", default-features = false, features=["postgresql", "rspc", "migrations"], rev = "f210ca250c297b39b9bb23cb43bb3ab3712d4a4c"}
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", default-features = false, features=["postgresql", "rspc", "migrations"], rev = "f210ca250c297b39b9bb23cb43bb3ab3712d4a4c"}
redis = {version = "^0.22", features = ["aio", "ahash", "tokio-comp"]}
tokio = { version = "^1.21", features = ["full"] }
openssl = { version = "^0.10", features = ["vendored"] } # daem openssl

[profile.release]
lto = true