[workspace]
resolver = "2"
members = [
    "shared-libs/rust/error-handler",
    "shared-libs/rust/prisma-client",
    "shared-libs/rust/services",
    "apps/erudio/backend-api",
    "apps/erudio/backend-prisma-cli"
]
[workspace.dependencies]
prisma_client = { path = "shared-libs/rust/prisma-client" }
services = { path = "shared-libs/rust/services" }
error_handler = { path = "shared-libs/rust/error-handler" }
config = { path = "shared-libs/rust/config" }

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", default-features = false, features=["postgresql", "rspc", "migrations", "mocking"], rev = "13fdf89503de65156011b9a135d9d12fb589e8f8"}
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", default-features = false, features=["postgresql", "rspc", "migrations", "mocking"], rev = "13fdf89503de65156011b9a135d9d12fb589e8f8"}
redis = {version = "^0.22", features = ["aio", "ahash", "tokio-comp", "json"]}
tokio = { version = "^1.23", features = ["macros", "parking_lot", "signal"] }
openssl = { version = "^0.10", features = ["vendored"] } # daem openssl
rspc = "0.1.2"
serde = "^1.0"
serde_json = "^1"
rand = "^0.8"
dotenvy = "^0.15"
log = "^0.4"
rust-argon2 = "^1.0"
hex = "^0.4"
env_logger = "^0.10"
ron = "^0.8"
color-eyre = "^0.6"
chrono = "^0.4"

[profile.release]
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3