cargo-features = ["workspace-inheritance"]

[package]
name = "prisma_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli.workspace = true
serde = "^1.0"
