[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma_client.workspace = true
services.workspace = true
error_handler.workspace = true
config.workspace = true
# external
prisma-client-rust = {workspace = true, features = ["postgresql", "rspc"]}
serde = {workspace = true, features=["derive"]}
rspc = {workspace = true, features = ["axum"] }
openssl.workspace = true
redis.workspace = true
tokio.workspace = true
serde_json.workspace = true
rand.workspace = true
dotenvy.workspace = true
log.workspace = true
rust-argon2.workspace = true
hex.workspace = true
env_logger.workspace = true
ron.workspace = true
color-eyre.workspace = true

tower-http = { version = "^0.3", features = ["cors"] }
axum = "^0.5"
tower-cookies = "^0.7"
cookie = "^0.16"