[package]
name = "backend_prisma_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = {workspace = true, features = ["postgresql", "rspc"]}
serde = {version = "^1", features=["derive"]}