[package]
name = "error_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma_client.workspace = true
redis.workspace = true
serde = "^1"
serde_json = "^1"
rust-argon2 = "^1.0"
rspc = "^0.1"
hex = "^0.4"
log = "^0.4"
eyre = "^0.6"
rand = "^0.8"
chrono = "^0.4"