[package]
name = "error_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma_client.workspace = true

redis.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
log.workspace = true
rust-argon2.workspace = true
hex.workspace = true
color-eyre.workspace = true
rspc.workspace = true
chrono.workspace = true