[package]
name = "prisma_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = {workspace = true, features = ["postgresql", "rspc"]}
serde = {workspace = true, features=["derive"]}
rand.workspace = true

[dev-dependencies]
dotenvy.workspace = true
serial_test = "^0.9"