[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma_client.workspace = true
error_handler.workspace = true
redis.workspace = true
log = "^0.4"
serde = "^1.0"
hex = "^0.4"
chrono = "^0.4"
tokio = { version = "^1.21", features = ["macros"] }

[dev-dependencies]
tokio = { version = "^1.21", features = ["full"] }
error_handler.workspace = true
openssl.workspace = true
env_logger = "^0"
rand = "^0.8"
dotenvy = "^0"
redis-test = { version = "0.1.1", features=["aio"] }
once_cell = "^1.16"
eyre = "^0.6"
uuid = { version = "^1.2", features=["v4"]}
