[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma_client.workspace = true
error_handler.workspace = true
config.workspace = true
# external
redis.workspace = true
serde.workspace = true
tokio.workspace = true
log.workspace = true
hex.workspace = true
color-eyre.workspace = true
chrono.workspace = true

rust-s3 = "^0.32"

[dev-dependencies]
tokio = {workspace = true, features = ["full"] }
error_handler.workspace = true
openssl.workspace = true
rand.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
ron.workspace = true

redis-test = { version = "0.1.1", features=["aio"] }
once_cell = "^1.16"
uuid = { version = "^1.2", features=["v4"]}