[package]
name = "backend_session_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend_prisma_client.workspace = true
backend_error_handler.workspace = true
redis.workspace = true
log = "^0.4"
hex = "^0.4"
chrono = "^0.4"

[dev-dependencies]
tokio = { version = "^1.21", features = ["full"] }
backend_error_handler.workspace = true
openssl.workspace = true
env_logger = "^0"
rand = "^0.8"
dotenvy = "^0"
eyre = "^0.6"
